--- a/RegistroTecnicos_Clientes.Api/appsettings.Development.json
+++ b/RegistroTecnicos_Clientes.Api/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "SqlConStr": "Server=MSI\\SQLExpress;Database=TecnicosDb;Initial Catalog=TecnicosDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
