--- a/RegistroTecnicos_Clientes.Api/appsettings.json
+++ b/RegistroTecnicos_Clientes.Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "SqlConStr": "Server=.;Initial Catalog=TecnicosDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
